--- a/src/components/tasks/Tasks.css
+++ b/src/components/tasks/Tasks.css
@@ -2,15 +2,27 @@
   display: flex;
   flex-flow: column nowrap;
   width: 100%;
-  border: solid 2px #000000;
-  box-sizing: border-box;
-  margin: 30px 0;
-  padding: 30px 10px;
 }
 
 .Specs {
   display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-evenly;
-  margin: 15px;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  border: solid 2px #000000;
+  box-sizing: border-box;
+  margin: 10px 20px;
+  padding: 30px;
+}
+
+.Image {
+  height: 20px;
+  width: 20px;
+  margin-right: 10px;
+}
+
+.Filters {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
 }
