--- a/src/components/tasks/Tasks.css
+++ b/src/components/tasks/Tasks.css
@@ -15,6 +15,13 @@
   padding: 30px;
 }
 
+.NewTaskData {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  width: 100%;
+}
+
 .Image {
   cursor: pointer;
   height: 20px;
