--- a/src/components/tasks/Tasks.css
+++ b/src/components/tasks/Tasks.css
@@ -63,8 +63,11 @@ button {
 
 .SpecsCheckBox {
   align-self: flex-start;
+  cursor: pointer;
   display: flex;
+  height: 20px;
   justify-self: start;
+  width: 20px;
 }
 
 .SpecsContent {
